[package]
name = "arref"
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/zxch3n/arref"
description = "Make borrow mut elements from an array easier"
repository = "https://github.com/zxch3n/arref"
authors = ["zxch3n <remch183@outlook.com>"]
keywords = ["array", "borrow", "index"]
include = ["Cargo.toml", "**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
